chore: made all the changes according to the comments made

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="LawFeelAboutAbuseLookupId">How do your in laws feel about the abuse?</label>
+                        <label for="LawFeelAboutAbuseLookupId">How do your in-laws feel about the abuse?</label>
                         <ss-multiselect-dropdown [options]="lawFeelAboutAbuseLookupOptionsList"
                                                  formControlName="LawFeelAboutAbuseLookupId"
                                                  [(ngModel)]="caseBook.Abuse.LawFeelAboutAbuseLookupArray">
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SignsOfPhysicalAbuseDesc">If yes, Please specify</label>
+                        <label for="SignsOfPhysicalAbuseDesc">If yes, please specify</label>
                         <input formControlName="SignsOfPhysicalAbuseDesc" class="form-control" />
                     </div>
 
@@ -74,7 +74,7 @@
                         </ss-multiselect-dropdown>
                     </div>
                     <div class="form-group">
-                        <label for="WeaponsUsedDesc">If others, Please specify</label>
+                        <label for="WeaponsUsedDesc">If others, please specify</label>
                         <input formControlName="WeaponsUsedDesc" class="form-control" />
                     </div>
                 </div>
@@ -108,10 +108,10 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="NumberOfYearsOfPhyscialAbuse">Number of years physical abuse has been occuring</label>
-                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].touched">
+                        <label for="NumberOfYearsOfPhyscialAbuse">Number of years physical abuse has been occurring</label>
+                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls.NumberOfYearsOfPhyscialAbuse.invalid && caseAbuseForm.controls.NumberOfYearsOfPhyscialAbuse.touched">
                             <input type="number" id="NumberOfYearsOfPhyscialAbuse" formControlName="NumberOfYearsOfPhyscialAbuse" class="form-control" />
-                            <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].invalid">
+                            <small *ngIf="caseAbuseForm.controls.NumberOfYearsOfPhyscialAbuse.touched && caseAbuseForm.controls.NumberOfYearsOfPhyscialAbuse.invalid">
                                 Value should be between 0 and 99
                             </small>
                         </div>
@@ -137,9 +137,9 @@
 
                     <div class="form-group">
                         <label for="NumberOfYearsOfEmotionalAbuse">Number of years emotional abuse has been occurring</label>
-                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].touched">
+                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls.NumberOfYearsOfEmotionalAbuse.invalid && caseAbuseForm.controls.NumberOfYearsOfEmotionalAbuse.touched">
                             <input type="number" id="NumberOfYearsOfEmotionalAbuse" formControlName="NumberOfYearsOfEmotionalAbuse" class="form-control" />
-                            <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].invalid">
+                            <small *ngIf="caseAbuseForm.controls.NumberOfYearsOfEmotionalAbuse.touched && caseAbuseForm.controls.NumberOfYearsOfEmotionalAbuse.invalid">
                                 Value should be between 0 and 99
                             </small>
                         </div>
@@ -167,9 +167,9 @@
 
                     <div class="form-group">
                         <label for="NumberOfYearsOfSexualAbuse">Number of years sexual abuse has been occurring</label>
-                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].touched">
+                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls.NumberOfYearsOfSexualAbuse.invalid && caseAbuseForm.controls.NumberOfYearsOfSexualAbuse.touched">
                             <input type="number" id="NumberOfYearsOfSexualAbuse" formControlName="NumberOfYearsOfSexualAbuse" class="form-control" />
-                            <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].invalid">
+                            <small *ngIf="caseAbuseForm.controls.NumberOfYearsOfSexualAbuse.touched && caseAbuseForm.controls.NumberOfYearsOfSexualAbuse.invalid">
                                 Value should be between 0 and 99
                             </small>
                         </div>
@@ -205,9 +205,9 @@
 
                     <div class="form-group">
                         <label for="NumberOfYearsOfEconomicAbuse">Number of years economic abuse has been occurring</label>
-                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].touched">
+                        <div class="form-group" [class.has-danger]="caseAbuseForm.controls.NumberOfYearsOfEconomicAbuse.invalid && caseAbuseForm.controls.NumberOfYearsOfEconomicAbuse.touched">
                             <input type="number" id="NumberOfYearsOfEconomicAbuse" formControlName="NumberOfYearsOfEconomicAbuse" class="form-control" />
-                            <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].invalid">
+                            <small *ngIf="caseAbuseForm.controls.NumberOfYearsOfEconomicAbuse.touched && caseAbuseForm.controls.NumberOfYearsOfEconomicAbuse.invalid">
                                 Value should be between 0 and 99
                             </small>
                         </div>
@@ -223,7 +223,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="ReasonForAbuseDesc">If other, please specify</label>
+                        <label for="ReasonForAbuseDesc">If others, please specify</label>
                         <input formControlName="ReasonForAbuseDesc" class="form-control" />
                     </div>
 
