--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
@@ -16,20 +16,20 @@
 
                     <div class="form-group">
                         <label for="SpouseHomePhone">Spouse Home phone</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls['SpouseHomePhone'].invalid && spouseForm.controls['SpouseHomePhone'].touched">
+                        <div class="form-group" [class.has-danger]="spouseForm.controls.SpouseHomePhone.invalid && spouseForm.controls.SpouseHomePhone.touched">
                             <input formControlName="SpouseHomePhone" digits maxlength="14" class="form-control" />
                             <div>
-                                <small *ngIf="spouseForm.controls['SpouseHomePhone'].dirty && spouseForm.controls['SpouseHomePhone'].invalid">Please provide a valid Phone</small>
+                                <small *ngIf="spouseForm.controls.SpouseHomePhone.dirty && spouseForm.controls.SpouseHomePhone.invalid">Please provide a valid Phone</small>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label for="SpouseMobilePhone">Spouse Mobile phone</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls['SpouseMobilePhone'].invalid && spouseForm.controls['SpouseMobilePhone'].touched">
+                        <div class="form-group" [class.has-danger]="spouseForm.controls.SpouseMobilePhone.invalid && spouseForm.controls.SpouseMobilePhone.touched">
                             <input formControlName="SpouseMobilePhone" digits maxlength="14" class="form-control" />
                             <div>
-                                <small *ngIf="spouseForm.controls['SpouseMobilePhone'].dirty && spouseForm.controls['SpouseMobilePhone'].invalid">Please provide a valid Mobile</small>
+                                <small *ngIf="spouseForm.controls.SpouseMobilePhone.dirty && spouseForm.controls.SpouseMobilePhone.invalid">Please provide a valid Mobile</small>
                             </div>
                         </div>
                     </div>
@@ -92,10 +92,10 @@
 
                     <div class="form-group">
                         <label for="PIN">PIN</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls['PIN'].invalid && spouseForm.controls['PIN'].touched">
+                        <div class="form-group" [class.has-danger]="spouseForm.controls.PIN.invalid && spouseForm.controls.PIN.touched">
                             <input formControlName="PIN" digits maxlength="6" class="form-control" />
                             <div>
-                                <small *ngIf="spouseForm.controls['PIN'].dirty && spouseForm.controls['PIN'].invalid">Please provide a valid PIN</small>
+                                <small *ngIf="spouseForm.controls.PIN.dirty && spouseForm.controls.PIN.invalid">Please provide a valid PIN</small>
                             </div>
                         </div>
                     </div>
@@ -129,10 +129,10 @@
 
                     <div class="form-group">
                         <label for="PrimaryEmergencyContactPhoneNumber">Phone number</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls['PrimaryEmergencyContactPhoneNumber'].invalid && spouseForm.controls['PrimaryEmergencyContactPhoneNumber'].touched">
+                        <div class="form-group" [class.has-danger]="spouseForm.controls.PrimaryEmergencyContactPhoneNumber.invalid && spouseForm.controls.PrimaryEmergencyContactPhoneNumber.touched">
                             <input formControlName="PrimaryEmergencyContactPhoneNumber" digits maxlength="14" class="form-control" />
                             <div>
-                                <small *ngIf="spouseForm.controls['PrimaryEmergencyContactPhoneNumber'].dirty && spouseForm.controls['PrimaryEmergencyContactPhoneNumber'].invalid">Please provide a valid Phone number</small>
+                                <small *ngIf="spouseForm.controls.PrimaryEmergencyContactPhoneNumber.dirty && spouseForm.controls.PrimaryEmergencyContactPhoneNumber.invalid">Please provide a valid Phone number</small>
                             </div>
                         </div>
                     </div>
@@ -158,10 +158,10 @@
 
                     <div class="form-group">
                         <label for="SecondaryEmergencyContactPhoneNumber">Phone number</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls['SecondaryEmergencyContactPhoneNumber'].invalid && spouseForm.controls['SecondaryEmergencyContactPhoneNumber'].touched">
+                        <div class="form-group" [class.has-danger]="spouseForm.controls.SecondaryEmergencyContactPhoneNumber.invalid && spouseForm.controls.SecondaryEmergencyContactPhoneNumber.touched">
                             <input formControlName="SecondaryEmergencyContactPhoneNumber" digits maxlength="14" class="form-control" />
                             <div>
-                                <small *ngIf="spouseForm.controls['SecondaryEmergencyContactPhoneNumber'].dirty && spouseForm.controls['SecondaryEmergencyContactPhoneNumber'].invalid">Please provide a valid Phone number</small>
+                                <small *ngIf="spouseForm.controls.SecondaryEmergencyContactPhoneNumber.dirty && spouseForm.controls.SecondaryEmergencyContactPhoneNumber.invalid">Please provide a valid Phone number</small>
                             </div>
                         </div>
                     </div>
