--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="ReferredToWhom">If Referred, please specify referred to whom</label>
+                        <label for="ReferredToWhom">If Referred, please specify "Referred to whom"</label>
                         <input formControlName="ReferredToWhom" class="form-control" maxlength="2000" />
                     </div>
 
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SourceOfCaseDesc">If other, please specify</label>
+                        <label for="SourceOfCaseDesc">If others, please specify</label>
                         <input formControlName="SourceOfCaseDesc" class="form-control" maxlength="2000" />
                     </div>
 
@@ -45,20 +45,20 @@
                     </div>
 
                     <div class="form-group">
-                        <div class="form-group" [class.has-danger]="caseManageForm.controls['TotalNoOfSessionsLookupId'].invalid && caseManageForm.controls['TotalNoOfSessionsLookupId'].touched">
-                            <label for="TotalNoOfSessionsLookupId">Total no of sessions</label>
+                        <div class="form-group" [class.has-danger]="caseManageForm.controls.TotalNoOfSessionsLookupId.invalid && caseManageForm.controls.TotalNoOfSessionsLookupId.touched">
+                            <label for="TotalNoOfSessionsLookupId">Total number of sessions</label>
                             <input type="number" id="TotalNoOfSessionsLookupId" formControlName="TotalNoOfSessionsLookupId" class="form-control" />
-                            <small *ngIf="caseManageForm.controls['TotalNoOfSessionsLookupId'].touched && caseManageForm.controls['TotalNoOfSessionsLookupId'].invalid">
+                            <small *ngIf="caseManageForm.controls.TotalNoOfSessionsLookupId.touched && caseManageForm.controls.TotalNoOfSessionsLookupId.invalid">
                                 Value should be between 0 & 99 And Non-Fractional.
                             </small>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="form-group" [class.has-danger]="caseManageForm.controls['TotalHoursSpentLookupId'].invalid && caseManageForm.controls['TotalHoursSpentLookupId'].touched">
+                        <div class="form-group" [class.has-danger]="caseManageForm.controls.TotalHoursSpentLookupId.invalid && caseManageForm.controls.TotalHoursSpentLookupId.touched">
                             <label for="TotalHoursSpentLookupId">Total hours spent</label>
                             <input type="number" id="TotalHoursSpentLookupId" formControlName="TotalHoursSpentLookupId" class="form-control" />
-                            <small *ngIf="caseManageForm.controls['TotalHoursSpentLookupId'].touched && caseManageForm.controls['TotalHoursSpentLookupId'].invalid">
+                            <small *ngIf="caseManageForm.controls.TotalHoursSpentLookupId.touched && caseManageForm.controls.TotalHoursSpentLookupId.invalid">
                                 Value should be between 0 & 99 And two digit precision.
                             </small>
                         </div>
