--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/offender_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/offender_case.component.html
@@ -32,14 +32,13 @@
         </div>
     </div>
 </div>
-<div class="modal fade" bsModal #offenderModal="bs-modal" [config]="{backdrop: 'static'}"
-     tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+<div class="modal fade" bsModal #offenderModal="bs-modal" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog" >
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title pull-left">Case Offender</h4>
-                <button type="button" class="close pull-right" aria-label="Close" (click)="hideOffenderModal()">
-                    <span aria-hidden="true">&times;</span>
+                <button type="button" class="close pull-right" label="Close" (click)="hideOffenderModal()">
+                    <span>&times;</span>
                 </button>
             </div>
             <div class="modal-body">
@@ -56,15 +55,15 @@
                                         <label for="Name">Name *</label>
                                         <textarea placeholder="Name" formControlName="Name" class="form-control"></textarea>
                                         <div>
-                                            <small *ngIf="caseOffenderForm.controls['Name'].hasError('required') && caseOffenderForm.controls['Name'].touched" class="mat-text-warn">Name is required.</small>
+                                            <small *ngIf="caseOffenderForm.controls.Name.hasError('required') && caseOffenderForm.controls.Name.touched" class="mat-text-warn">Name is required.</small>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="Age">Age *</label>
-                                        <div class="form-group" [class.has-danger]="caseOffenderForm.controls['Age'].invalid && caseOffenderForm.controls['Age'].touched">
+                                        <div class="form-group" [class.has-danger]="caseOffenderForm.controls.Age.invalid && caseOffenderForm.controls.Age.touched">
                                             <input type="number" id="Age" formControlName="Age" class="form-control" />
-                                            <small *ngIf="caseOffenderForm.controls['Age'].touched && caseOffenderForm.controls['Age'].invalid">
+                                            <small *ngIf="caseOffenderForm.controls.Age.touched && caseOffenderForm.controls.Age.invalid">
                                                 Value should be between 0 and 99
                                             </small>
                                         </div>
@@ -78,7 +77,7 @@
                                                    [allowClear]="true">
                                         </ng-select>
                                         <div>
-                                            <small *ngIf="caseOffenderForm.controls['GenderLookupId'].hasError('required') && caseOffenderForm.controls['GenderLookupId'].touched" class="mat-text-warn">Gender is required.</small>
+                                            <small *ngIf="caseOffenderForm.controls.GenderLookupId.hasError('required') && caseOffenderForm.controls.GenderLookupId.touched" class="mat-text-warn">Gender is required.</small>
                                         </div>
                                     </div>
 
@@ -90,12 +89,12 @@
                                                    [allowClear]="true">
                                         </ng-select>
                                         <div>
-                                            <small *ngIf="caseOffenderForm.controls['RelationshipWithVictimLookupId'].hasError('required') && caseOffenderForm.controls['RelationshipWithVictimLookupId'].touched" class="mat-text-warn">Relationship With Victim is required.</small>
+                                            <small *ngIf="caseOffenderForm.controls.RelationshipWithVictimLookupId.hasError('required') && caseOffenderForm.controls.RelationshipWithVictimLookupId.touched" class="mat-text-warn">Relationship With Victim is required.</small>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="OtherRelationship">If other, please specify</label>
+                                        <label for="OtherRelationship">If others, please specify</label>
                                         <textarea placeholder="Other Relationship" formControlName="OtherRelationship" class="form-control"></textarea>
 
                                     </div>
