--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SufferingFromAnyMajorIllnessDesc">If yes, please specify:?</label>
+                        <label for="SufferingFromAnyMajorIllnessDesc">If yes, please specify?</label>
                         <input formControlName="SufferingFromAnyMajorIllnessDesc" class="form-control" />
                     </div>
 
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="DiagnosedPsychiatricIllnessDesc">If yes, please specify:?</label>
+                        <label for="DiagnosedPsychiatricIllnessDesc">If yes, please specify?</label>
                         <input formControlName="DiagnosedPsychiatricIllnessDesc" class="form-control" />
                     </div>
 
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="AnyMedicationDesc">If yes, what medication:?</label>
+                        <label for="AnyMedicationDesc">If yes, what medication?</label>
                         <input formControlName="AnyMedicationDesc" class="form-control" />
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="AnySubstanceDesc">Please specify:</label>
+                        <label for="AnySubstanceDesc">If yes, please specify</label>
                         <input formControlName="AnySubstanceDesc" class="form-control" />
                     </div>
 
@@ -112,7 +112,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CurrentlyPregnantDesc">If yes, give details:</label>
+                        <label for="CurrentlyPregnantDesc">If yes, give details</label>
                         <input formControlName="CurrentlyPregnantDesc" class="form-control" />
                     </div>
 
@@ -125,7 +125,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="ReasonForSeekingHelpDesc">If other, please specify</label>
+                        <label for="ReasonForSeekingHelpDesc">If others, please specify</label>
                         <input formControlName="ReasonForSeekingHelpDesc" class="form-control" />
                     </div>
 
